# terrashire

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.woodpecker/: main.yaml
terrashire/: cli.py  cmd_util.py  config.py  gitea.py  help.py  host.py  mod.py  network.py  npm.py  opnsense.py  pihole.py  proxmox.py  terrashire.py  test_cli.py  woodpecker.py
terrashire/astro/: Dockerfile  docker-compose.yaml
terrashire/ghost/: docker-compose.yaml
terrashire/gitea/: README.md  docker-compose.yaml
terrashire/init/: .gitignore  Config.json
terrashire/kubernetes/: READMD.md
terrashire/npm/: Dockerfile  README.md  docker-compose.yaml  main.tf  nginx.conf  var.tf
terrashire/npm/terraform/: terraform.tfvars
terrashire/opnsense/: README.md  main.tf  terraform.tfvars  var.tf
terrashire/pihole/: main.tf  terraform.tfvars  var.tf
terrashire/proxmox/: README.md  proxmox_setup.sh
terrashire/proxmox/pve0/: main.tf  terraform.tfvars  var.tf
terrashire/woodpecker/: .env  README.md  docker-compose.yaml
