[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0"
name="terrashire"
dependencies = [
    "paramiko",
    "scapy",
    "typer",
    "watchdog"
]

[project.scripts]
terrashire = "terrashire.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["terrashire*"]
namespaces = false

[tool.setuptools]
include-package-data = true